# splus

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REPORT.md  SECURITY.md  SPLUS.md  install.sh  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md  feature_request.md
.github/workflows/: ci.yml  release.yml  splus-review.yml
bench/: run.mjs
bench/martian/: README.md  calibrate.mjs  run.mjs
crates/splus-engine/: Cargo.toml
crates/splus-engine/src/: diff.rs  inspect.rs  lib.rs  main.rs  model.rs  pipeline.rs  render.rs  util.rs
crates/splus-engine/src/analysis/: complexity.rs  graph.rs  langspec.rs  mod.rs  scip.rs  symbols.rs  tslang.rs
crates/splus-engine/src/collectors/: blast_radius.rs  complexity.rs  coverage.rs  external.rs  heuristics.rs  history.rs  mod.rs  mutation.rs  secrets.rs
docs/: ARCHITECTURE.md  RESEARCH.md  TOOLS.md
explorations/: README.md  report-prompt.md  splus-report-v2.html  splus-report.html  splus-self-review.html
scripts/: build-release.mjs  build-report-template.mjs  gh-annotate.mjs  selfreview.sh  test-install.sh
skills/pr-review/: SKILL.md
skills/prefs/: SKILL.md
skills/review/: SKILL.md
skills/review/references/: dispatch.md  investigate.md  lenses.md  verify.md
