# Splus — Rust workspace
# The deterministic review engine. TS surfaces (CLI, GitHub App) shell out to the
# `splus-engine` binary and consume its canonical Finding JSON.
[workspace]
resolver = "2"
members = ["crates/splus-engine"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ojowwalker77/Splus"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
