# Splus — Rust workspace
# The deterministic review engine. The TS surfaces (CLI, MCP server) shell out to
# the `splus-engine` binary and consume its canonical Finding JSON.
[workspace]
resolver = "2"
members = ["crates/splus-engine"]

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kiwi-init/splus"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
