[package]
name = "splus-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Splus deterministic code-review engine: diff-scoped, clean-as-you-code, zero-inference."

[[bin]]
name = "splus-engine"
path = "src/main.rs"

[lib]
name = "splus_engine"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

# Tree-sitter analysis tier (symbols, cognitive complexity, blast radius).
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
# Deep-analysis grammars for the rest of the top-15 languages. Versions verified
# to resolve against tree-sitter 0.25 (they pin tree-sitter-language, not core).
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-scala = "0.26"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-swift = "0.7"
tree-sitter-bash = "0.25"

# SCIP precise tier: decode index.scip (Sourcegraph Code Intelligence Protocol).
# We hand-declare the minimal message subset, so no protoc/build.rs is needed.
prost = "0.13"

[dev-dependencies]
